# template-ssdd-lab

./: .gitignore  .pylintrc  CODEOWNERS  README.md  run_iceflix  setup.cfg
.github/workflows/: pylint.yaml
configs/: icebox.config  icestorm.config  main.config
iceflix/: __init__.py  cli.py  iceflix.ice  main.py  rtsputils.py  service_announcement.py
packagename/: cli.py  iceflix.ice
