[metadata]
name = Package Name
version = 0.0.1
description = Template package to use in the IceFlix laboratory

[options]
packages = find:
install_requires =
    zeroc-ice>=3.6.5

[options.package_data]
* = *.ice

[options.entry_points]
console_scripts =
    iceflix_service = packagename.cli:main_service
