[metadata]
name = Project name
version = 0.0.1
description = Project description

[options]
packages = find:
install_requires =
    zeroc-ice>=3.6.5

[options.entry_points]
console_scripts =
    mainservice = packagename.cli:main_service
    catalogservice = packagename.cli:catalog_service
    streamingservice = packagename.cli:streaming_service
    authenticationservice = packagename.cli:authentication_service
